# TransformerProjector

./: .gitignore  Makefile  README.md  app.py  example_trainer.py  pyproject.toml  ruff.toml
deep_reorder/: __init__.py  app.py  deep_reorder.py  example_trainer.py  example_visualizer.py  train.py
deep_reorder/models/: qwen25.py
notebooks/: WIP.ipynb  hf_test.ipynb  test_load.ipynb
scripts/: merge_safetensors.py  rename_weights.py
transformer_projector/: __init__.py  example_visualizer.py  transformer_projector.py
