[project]
name = "transformer-projector"
version = "0.1.0"
description = "Experiment to see activation structure of transformer components."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.3.0",
    "datasets>=2.14.4",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.6",
    "ipython>=8.31.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "pyqt6>=6.8.1",
    "rich>=13.9.4",
    "safetensors>=0.5.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.18.0",
    "torch>=2.5.1",
    "torchao>=0.8.0",
    "torchtune>=0.5.0",
    "transformers>=4.48.1",
]
